# ChessGame

./: .gitignore  CMakeLists.txt  README.md
JAVA/: README.md
JAVA/src/Chest/Colors/: Color.java  ColorBlack.java  ColorWhite.java
JAVA/src/Chest/Moves/: Move.java
JAVA/src/Chest/Pieces/: Piece.java  Pion.java  Roi.java
JAVA/src/Chest/Plateau/: Case.java  Coordonnee.java  Plateau.java
JAVA/src/Chest/Player/: Player.java
libraries/SFML-2.6.1/doc/html/: Transformable_8hpp_source.html  View_8hpp_source.html  classsf_1_1CircleShape.html  classsf_1_1ConvexShape.html  classsf_1_1Listener.html  classsf_1_1RectangleShape.html  classsf_1_1Shape.html  classsf_1_1Sprite.html  classsf_1_1Text.html  classsf_1_1Transformable.html  classsf_1_1View.html
libraries/SFML-2.6.1/include/SFML/Graphics/: Transformable.hpp  View.hpp
src/: Action.cpp  Action.hpp  Board.cpp  Board.hpp  CMakeLists.txt  ClassDiagram.puml  Coordonnees.cpp  Coordonnees.hpp  Couleur.hpp  FromTo.cpp  FromTo.hpp  Joueur.cpp  Joueur.hpp  Move.cpp  Move.hpp  Player.cpp  Player.hpp  main.cpp
src/Client/: BoardBackground.cpp  BoardBackground.hpp  CMakeLists.txt  PieceRenderer.cpp  PieceRenderer.hpp  VBoard.cpp  VBoard.hpp  main.cpp
src/Client/Mock/: BoardMock.cpp  BoardMock.hpp  CMakeLists.txt  GameMock.cpp  GameMock.hpp  PieceMock.cpp  PieceMock.hpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  TextureManager.cpp  TextureManager.hpp
src/Interface/: CMakeLists.txt  IBoard.hpp  IGame.hpp  IPiece.cpp  IPiece.hpp
src/Pieces/: Bishop.cpp  Bishop.hpp  CMakeLists.txt  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
